caddy basic auth /03

--- a/traefik-manager-noacme/toolproxy.yml
+++ b/traefik-manager-noacme/toolproxy.yml
@@ -43,8 +43,9 @@ services:
     container_name: prom_caddy
     ports:
       - "8080:8080"
-      - "9443:443"
-      - "9080:80"
+    expose:
+      - "443"
+      - "80"
     volumes:
       - ./caddy/:/etc/caddy/
     environment:
