update toml/ RM basic auth

--- a/traefik-manager-noacme/traefik.toml
+++ b/traefik-manager-noacme/traefik.toml
@@ -3,11 +3,11 @@ logLevel = "DEBUG"
 
 defaultEntryPoints = ["https","http"]
 
-[web]
-address = ":9090"
-  [web.auth.basic]
-  users = ["admin:$apr1$aGu4aUu3$zp1DJDhVjtrNY49psnM7r0"]
-  # plain password is: 0eb0f01DHb57d7124fb98g
+#[web]
+#address = ":9090"
+#  [web.auth.basic]
+#  users = ["admin:$apr1$aGu4aUu3$zp1DJDhVjtrNY49psnM7r0"]
+   # plain password is: 0eb0f01DHb57d7124fb98g
   
  [entryPoints]
 	[entryPoints.http]
