--- a/traefik-manager-noacme/toolproxy.yml
+++ b/traefik-manager-noacme/toolproxy.yml
@@ -39,9 +39,9 @@ services:
       - mode: ingress
         target: 80
         published: 80
-      - mode: ingress
-        target: 443
-        published: 443
+      #- mode: ingress
+      #  target: 443
+      #  published: 443
       - "8080:8080"
     volumes:
       - traefik-pub:/etc/traefik/acme
