--- a/traefik-manager-noacme/toolproxy.yml
+++ b/traefik-manager-noacme/toolproxy.yml
@@ -11,12 +11,12 @@ volumes:
   traefik-pub: {}
 
 services:
-  docker-proxy:
+  socat :
     image: rancher/socat-docker
     networks:
       - ntw_front
     volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
+      - /var/run/docker.sock:/var/run/docker.sock:ro
     deploy:
       mode: replicated
       replicas: 1
@@ -43,14 +43,18 @@ services:
       #  target: 443
       #  published: 443
       - "8080:8080"
-    volumes:
-      - traefik-pub:/etc/traefik/acme
+    #volumes:
+    #  - traefik-pub:/etc/traefik/acme
     command: --docker \
-      --docker.swarmmode \
-      --docker.endpoint=tcp://docker-proxy:2375 \
+      --docker.swarmmode=true \
+      --docker.endpoint=tcp://socat:2375 \
       --docker.domain=traefik \
-      --docker.watch \
-      --entryPoints='Name:http' \
+      --docker.watch=true
+      --docker.exposedbydefault=false \
+      --entryPoints='Name:http,https' \
+      --debug=true \
+      --loglevel=DEBUG \
+      --compress=true \
       --web
       #--acme.entrypoint=https \
       #--acme=true \
