--- a/traefik-manager-noacme/toolproxy.yml
+++ b/traefik-manager-noacme/toolproxy.yml
@@ -43,8 +43,8 @@ services:
       #  target: 443
       #  published: 443
       - "8080:8080"
-    #volumes:
-    #  - traefik-pub:/etc/traefik/acme
+    volumes:
+      - traefik-pub:/etc/traefik/acme
     command: --docker \
       --docker.swarmmode \
       --docker.endpoint=tcp://socat:2375 \
