--- a/traefik-manager-noacme/toolproxy.yml
+++ b/traefik-manager-noacme/toolproxy.yml
@@ -31,8 +31,8 @@ services:
           cpus: '0.10'
           memory: 8M
 
-  traefik-pub:
-    image: traefik:1.3.8-alpine
+  traefik:
+    image: traefik:1.4.0-rc4-alpine
     networks:
       - ntw_front
     ports:
