--- a/traefik-manager-noacme/toolproxy.yml
+++ b/traefik-manager-noacme/toolproxy.yml
@@ -32,7 +32,7 @@ services:
           memory: 8M
 
   traefik:
-    image: traefik:1.4.0-rc4-alpine
+    image: traefik:1.3.8-alpine
     networks:
       - ntw_front
     ports:
