--- a/traefik-manager-noacme/toolportainer.yml
+++ b/traefik-manager-noacme/toolportainer.yml
@@ -37,6 +37,7 @@ networks:
   ntw_front:
     external: true
 
+# potential setup https://github.com/portainer/portainer/issues/461
 
 # Inspired from https://github.com/portainer/portainer-compose/blob/master/docker-stack.yml
 # by Pascal Andy | # https://twitter.com/askpascalandy
