--- a/traefik-manager-noacme/toolproxy.yml
+++ b/traefik-manager-noacme/toolproxy.yml
@@ -27,6 +27,8 @@ services:
         reservations:
           cpus: '0.10'
           memory: 8M
+      labels:
+        - "traefik.enable=false"
 
   traefik:
     image: traefik:1.3.8-alpine
@@ -74,7 +76,9 @@ services:
         reservations:
           cpus: '0.10'
           memory: 64M
-
+      labels:
+        - "traefik.enable=false"
+        
 # no acme
 #
 # Inspired by https://github.com/containous/traefik/issues/766#issuecomment-335208880
