traefik-consul init /04

--- a/traefik-consul/docker-compose.yml
+++ b/traefik-consul/docker-compose.yml
@@ -21,10 +21,8 @@ services:
 
   web-server:
     image: crccheck/hello-world
-    expose:
-      - "8000"
     environment:
-      - SERVICE_TAGS=traefik.enable=true,traefik.frontend.entryPoints=http,traefik.frontend.rule=Host:localhost
+      - SERVICE_TAGS=traefik.enable=true,traefik.frontend.entryPoints=http,traefik.frontend.rule=Host:localhost,traefik.port=8000
 
   registrator:
     depends_on:
