--- a/traefik-consul/docker-compose.yml
+++ b/traefik-consul/docker-compose.yml
@@ -21,8 +21,10 @@ services:
 
   web-server:
     image: crccheck/hello-world
+    ports:
+      - "8000:8000"
     environment:
-      - SERVICE_TAGS=traefik.enable=true,traefik.frontend.entryPoints=http,traefik.frontend.rule=Host:localhost,traefik.port=8000
+      - SERVICE_TAGS=traefik.enable=true,traefik.frontend.entryPoints=http,traefik.frontend.rule=Host:localhost
 
   registrator:
     depends_on:
