traefik-consul init /06

--- a/traefik-consul/docker-compose.yml
+++ b/traefik-consul/docker-compose.yml
@@ -13,20 +13,18 @@ services:
     command: traefik --consulcatalog.endpoint=consul:8500
     ports:
       - "8080:8080"
-      - "80:8000"
+      - "80:2015"
     depends_on:
       - consul
     links:
       - consul
 
-  web-server:
-    image: crccheck/hello-world
-    ports:
-      - "8000:8000"
+  home:
+    image: abiosoft/caddy
     environment:
       - SERVICE_TAGS=traefik.enable=true,traefik.frontend.entryPoints=http,traefik.frontend.rule=Host:localhost
 
-  registrator:
+registrator:
     depends_on:
       - consul
     image: gliderlabs/registrator:master
