traefik-consul init /09

--- a/traefik-consul/docker-compose.yml
+++ b/traefik-consul/docker-compose.yml
@@ -13,14 +13,16 @@ services:
     command: traefik --consulcatalog.endpoint=consul:8500
     ports:
       - "8080:8080"
-      - "80:80"
+      - "8081:80"
     depends_on:
       - consul
     links:
       - consul
 
-  home:
-    image: abiosoft/caddy
+  web-server:
+    image: crccheck/hello-world
+    ports:
+      - "8000:8000"
     environment:
       - SERVICE_TAGS=traefik.enable=true,traefik.frontend.entryPoints=http,traefik.frontend.rule=Host:localhost
 
