--- a/traefik-consul/docker-compose.yml
+++ b/traefik-consul/docker-compose.yml
@@ -1,5 +1,7 @@
-version: '2'
+version: '3.3'
+
 services:
+
   consul:
     image: consul
     command: consul agent -server -dev -client=0.0.0.0 -ui -bootstrap -log-level warn
@@ -31,14 +33,31 @@ services:
 
   home:
     image: abiosoft/caddy
+    networks:
+      - ntw_front
     volumes:
       - ./www/home/srv/:/srv/
-    labels:
-      - "traefik.backend=home"
-      - "traefik.frontend.rule=PathPrefixStrip:/"
-      - "traefik.port=2015"
-      - "traefik.enable=true"
-      - "traefik.backend.loadbalancer.method=drr"
-      - "traefik.frontend.entryPoints=http"
-      - "traefik.docker.network=ntw_front"
-      - "traefik.weight=10"
+    deploy:
+      mode: replicated
+      replicas: 2
+      #placement:
+      #  constraints: [node.role==manager]
+      restart_policy:
+        condition: on-failure
+        max_attempts: 5
+      resources:
+        limits:
+          cpus: '0.20'
+          memory: 9M
+        reservations:
+          cpus: '0.05'
+          memory: 9M
+      labels:
+        - "traefik.backend=home"
+        - "traefik.frontend.rule=PathPrefixStrip:/"
+        - "traefik.port=2015"
+        - "traefik.enable=true"
+        - "traefik.backend.loadbalancer.method=drr"
+        - "traefik.frontend.entryPoints=http"
+        - "traefik.docker.network=ntw_front"
+        - "traefik.weight=10"
