--- a/traefik-consul/docker-compose.yml
+++ b/traefik-consul/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '2.0'
+version: '2'
 
 services:
 
@@ -15,11 +15,25 @@ services:
     command: traefik --consulcatalog.endpoint=consul:8500
     ports:
       - "8080:8080"
-      - "80:80"
+      - "8081:80"
     depends_on:
       - consul
     links:
       - consul
+
+  web-server:
+    image: crccheck/hello-world
+    ports:
+      - "8000:8000"
+    environment:
+      - SERVICE_TAGS=traefik.enable=true,traefik.frontend.entryPoints=http,traefik.frontend.rule=Host:localhost
+
+  web-server2:
+    image: crccheck/hello-world
+    ports:
+      - "8000:8000"
+    environment:
+      - SERVICE_TAGS=traefik.enable=true,traefik.frontend.entryPoints=http,traefik.frontend.rule=PathPrefixStrip:hello
 
   registrator:
     depends_on:
@@ -30,34 +44,3 @@ services:
       - /var/run/docker.sock:/tmp/docker.sock
     links:
       - consul
-
-  home:
-    image: abiosoft/caddy
-    networks:
-      - ntw_front
-    volumes:
-      - ./www/home/srv/:/srv/
-    deploy:
-      mode: replicated
-      replicas: 2
-      #placement:
-      #  constraints: [node.role==manager]
-      restart_policy:
-        condition: on-failure
-        max_attempts: 5
-      resources:
-        limits:
-          cpus: '0.20'
-          memory: 9M
-        reservations:
-          cpus: '0.05'
-          memory: 9M
-      labels:
-        - "traefik.backend=home"
-        - "traefik.frontend.rule=PathPrefixStrip:/"
-        - "traefik.port=2015"
-        - "traefik.enable=true"
-        - "traefik.backend.loadbalancer.method=drr"
-        - "traefik.frontend.entryPoints=http"
-        - "traefik.docker.network=ntw_front"
-        - "traefik.weight=10"
