--- a/traefik-manager-noacme/toolproxy.yml
+++ b/traefik-manager-noacme/toolproxy.yml
@@ -29,7 +29,7 @@ services:
         - "traefik.enable=false"
 
   traefik:
-    image: traefik:1.4.0-alpine
+    image: devmtl/traefikfire:1.3.8A
     networks:
       - ntw_front
     ports:
