--- a/traefik_stack1/toolproxy.yml
+++ b/traefik_stack1/toolproxy.yml
@@ -15,17 +15,40 @@ services:
       --docker.swarmmode \
       --docker.domain=traefik \
       --docker.watch \
+      --debug=true \
+      --logLevel=WARN \
       --web \
       --web.metrics.prometheus \
-      --web.metrics.prometheus.buckets="0.1,0.3,1.2,5.0"
+      --web.metrics.prometheus.buckets="0.1,0.3,1.2,5.0" \
+      --web.address=:8080
     deploy:
+      #labels:
+      #- "traefik.enable=false"
+      mode: replicated
+      replicas: 1
+      update_config:
+        delay: 2s
       placement:
-        constraints: [ node.role == manager ]
+        constraints: [node.role==manager]
+      restart_policy:
+        condition: on-failure
+        max_attempts: 5
+      resources:
+        limits:
+          cpus: '0.33'
+          memory: 128M
+        reservations:
+          cpus: '0.05'
+          memory: 64M
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
     ports:
-      - 80:80
-      - 8080:8080
+      - mode: ingress
+        published: 80
+        target: 80
+      - mode: host
+        published: 8080
+        target: 8080
     networks:
       - ntw_front
     configs:
