--- a/traefik_stack1/toolproxy.yml
+++ b/traefik_stack1/toolproxy.yml
@@ -10,11 +10,34 @@ configs:
 
 services:
 
+  socat:
+    image: devmtl/socatproxy:1.0A
+    networks:
+      - ntw_front
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock:ro
+    deploy:
+      mode: replicated
+      replicas: 1
+      placement:
+        constraints:
+          - node.role == manager
+      resources:
+        limits:
+          cpus: '0.20'
+          memory: 16M
+        reservations:
+          cpus: '0.10'
+          memory: 8M
+      labels:
+        - "traefik.enable=false"
+
   traefik:
     image: traefik:1.4.0-alpine
     command: --docker \
       --docker.swarmmode \
       --docker.domain=traefik \
+      --docker.endpoint=tcp://socat:2375 \
       --docker.watch \
       --debug=true \
       --logLevel=WARN \
@@ -22,8 +45,8 @@ services:
       --web.metrics.prometheus \
       --web.metrics.prometheus.buckets="0.1,0.3,1.2,5.0" \
       --web.address=:8080
-    volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
+    #volumes:
+    #  - /var/run/docker.sock:/var/run/docker.sock
     ports:
       - mode: ingress
         published: 80
