--- a/traefik_stack3/docker-compose.yml
+++ b/traefik_stack3/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.3"
  
 services:
   traefik:
-    image: traefik:1.4
+    image: traefik:1.4.2
     ports:
       - 80:80
       - 8080:8080
@@ -25,7 +25,7 @@ services:
     deploy:
       placement:
         constraints:
-          - node.role == worker
+          - node.role == manager
       labels:
         - "traefik.port=5000"
         - "traefik.backend=books"
@@ -38,7 +38,7 @@ services:
     deploy:
       placement:
         constraints:
-          - node.role == worker
+          - node.role == manager
       labels:
         - "traefik.port=5000"
         - "traefik.backend=movies"
