--- a/nextcloud/docker-compose.yml
+++ b/nextcloud/docker-compose.yml
@@ -10,35 +10,75 @@ volumes:
   vol_nextcloud_custom_apps:
   vol_nextcloud_config:
     
+configs:
+  traefik.toml:
+    file: ./configs/traefik.toml
+
 services:
-  traefik:
-    image: devmtl/traefikfire:1.4.3B
+
+  socat:
+    image: devmtl/socatproxy:1.0B
+    networks:
+      - ntw_front
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock:ro
     deploy:
+      mode: replicated
+      replicas: 1
       placement:
         constraints:
           - node.role == manager
-    ports:
-      - "80:80"
-      - "443:443"
-      - "8080:8080"
-    volumes:
-      - "/var/run/docker.sock:/var/run/docker.sock"
-      - "vol_traefik:/etc/traefik/"
-    command: traefik --loglevel=WARN
-    networks:
-      - ntw_front
-
-  nextcloud:
-    image: nextcloud:12.0.3-apache
-    volumes:
-      - "vol_nextcloud_data:/var/www/html/data"
-      - "vol_nextcloud_custom_apps:/var/www/html/custom_apps"
-      - "vol_nextcloud_config:/var/www/html/config"
-    deploy:
+      resources:
+        limits:
+          cpus: '0.20'
+          memory: 16M
+        reservations:
+          cpus: '0.10'
+          memory: 8M
       labels:
-        - "traefik.port=80"
-        - "traefik.frontend.rule=Host:/"
-        - "traefik.enable=true"
-        - "traefik.docker.network=ntw_front"
+        - "traefik.enable=false"
+
+  traefik:
+    image: devmtl/traefikfire:1.4.3B
+    ports:
+    - target: 80
+      protocol: tcp
+      published: 80
+      mode: ingress
+    - target: 8080
+      protocol: tcp
+      published: 8080
+      mode: ingress
     networks:
       - ntw_front
+    configs:
+      - source: traefik.toml
+        target: /etc/traefik/traefik.toml
+    command: --docker \
+      --docker.swarmmode \
+      --docker.domain=traefik \
+      --docker.endpoint=tcp://socat:2375 \
+      --docker.watch \
+      --debug=true \
+      --logLevel=WARN \
+      --web \
+      --web.metrics.prometheus \
+      --web.metrics.prometheus.buckets="0.1,0.3,1.2,5.0" \
+      --web.address=:8080
+    deploy:
+      mode: replicated
+      replicas: 1
+      update_config:
+        delay: 2s
+      placement:
+        constraints: [node.role==manager]
+      restart_policy:
+        condition: on-failure
+        max_attempts: 5
+      resources:
+        limits:
+          cpus: '0.33'
+          memory: 128M
+        reservations:
+          cpus: '0.05'
+          memory: 64M
