--- a/traefik_stack1/toolproxy.yml
+++ b/traefik_stack1/toolproxy.yml
@@ -33,7 +33,7 @@ services:
         - "traefik.enable=false"
 
   traefik:
-    image: devmtl/traefikfire:edge_2017-11-23_11H25
+    image: devmtl/traefikfire:1.4.3B
     ports:
     - target: 80
       protocol: tcp
