--- a/traefik_stack1/toolproxy.yml
+++ b/traefik_stack1/toolproxy.yml
@@ -35,7 +35,7 @@ services:
 #devmtl/traefikfire:1.4.3B
 
   traefik:
-    image: traefik
+    image: traefik:1.5.0-rc1-alpine
     ports:
     - target: 80
       protocol: tcp
