--- a/traefik_stack1/toolproxy.yml
+++ b/traefik_stack1/toolproxy.yml
@@ -38,7 +38,7 @@ services:
 # traefik:1.4.5-alpine
 
   traefik:
-    image: traefik:1.4.5-alpine
+    image: devmtl/traefikfire:1.4.5A
     ports:
     - target: 80
       protocol: tcp
