--- a/traefik_stack5/docker-compose.yml
+++ b/traefik_stack5/docker-compose.yml
@@ -74,8 +74,8 @@ services:
       - consul-data:/consul/data
     environment:
       - CONSUL_LOCAL_CONFIG={"datacenter":"us_east2","server":true}
-      - CONSUL_BIND_INTERFACE=127.0.0.1
-      - CONSUL_CLIENT_INTERFACE=127.0.0.1
+      - CONSUL_BIND_INTERFACE=eth1
+      - CONSUL_CLIENT_INTERFACE=eth1
     deploy:
       replicas: 1
       placement:
