--- a/traefik_stack5/toolweb.yml
+++ b/traefik_stack5/toolweb.yml
@@ -25,11 +25,15 @@ services:
           memory: 9M
       labels:
       - "traefik.frontend.rule=PathPrefixStrip:/"
+      - "traefik.backend=home"
       - "traefik.port=2015"
-      - "traefik.enable=true"
-      - "traefik.docker.network=ntw_front"
-      - "traefik.backend.loadbalancer.method=drr"
       - "traefik.weight=10"
+      - "traefik.enable=true"
+      - "traefik.passHostHeader=true"
+      - "traefik.docker.network=ntw_front"
+      - "traefik.frontend.entryPoints=http"
+      - "traefik.backend.loadbalancer.swarm=true"
+      - "traefik.backend.loadbalancer.method=drr"
 
   who1:
     image: nginx:1.13-alpine
@@ -54,11 +58,15 @@ services:
           memory: 9M
       labels:
       - "traefik.frontend.rule=PathPrefixStrip:/who1"
+      - "traefik.backend=who1"
       - "traefik.port=80"
-      - "traefik.enable=true"
-      - "traefik.docker.network=ntw_front"
-      - "traefik.backend.loadbalancer.method=drr"
       - "traefik.weight=10"
+      - "traefik.enable=true"
+      - "traefik.passHostHeader=true"
+      - "traefik.docker.network=ntw_front"
+      - "traefik.frontend.entryPoints=http"
+      - "traefik.backend.loadbalancer.swarm=true"
+      - "traefik.backend.loadbalancer.method=drr"
 
   who2:
     image: emilevauge/whoami
@@ -81,11 +89,15 @@ services:
           memory: 9M
       labels:
       - "traefik.frontend.rule=PathPrefixStrip:/who2"
+      - "traefik.backend=who2"
       - "traefik.port=80"
-      - "traefik.enable=true"
-      - "traefik.docker.network=ntw_front"
-      - "traefik.backend.loadbalancer.swarm=true"
       - "traefik.weight=10"
+      - "traefik.enable=true"
+      - "traefik.passHostHeader=true"
+      - "traefik.docker.network=ntw_front"
+      - "traefik.frontend.entryPoints=http"
+      - "traefik.backend.loadbalancer.swarm=true"
+      - "traefik.backend.loadbalancer.method=drr"
 
 networks:
   ntw_front:
