--- a/traefik_stack5/toolproxy.yml
+++ b/traefik_stack5/toolproxy.yml
@@ -38,7 +38,7 @@ services:
 # traefik:1.4.5-alpine
 
   traefik:
-    image: traefik:1.5.0-rc3-alpine
+    image: devmtl/traefikfire:edge_2018-01-14_22H05
     ports:
     - target: 80
       protocol: tcp
